@@ -1,4 +1,4 @@
 module PDFToImage
   # pdftoimage version
-  VERSION = "0.1.1"
+  VERSION = "0.1.2"
 end
