@@ -1,6 +1,7 @@
 === 0.1.2 / 2010-11-11
 * Added support for blocks upon opening a PDF
 * Image objects now support the "quality" method for JPEG/MIFF/PNG compression levels.
+* PDF conversion is now deferred until saving. This greatly speeds up the conversion process in cases where you only want a few pages out of a large document converted.
 
 === 0.1.1 / 2010-11-10
 
